--- a/frontend/src/components/home/candlestickChart/CandlestickChart.css
+++ b/frontend/src/components/home/candlestickChart/CandlestickChart.css
@@ -17,3 +17,38 @@
 .apexcharts-canvas {
     max-width: 100%;
 }
+
+.chart-info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 365px;
+    flex-direction: column;
+}
+
+.loading-spinner {
+    border: 4px solid #f3f3f3; /* Szary kolor tła */
+    border-top: 4px solid #3498db; /* Niebieski kolor spinnera */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite; /* Dodajemy animację */
+    margin-bottom: 10px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.loading-text {
+    font-size: 1.5rem;
+    color: #fff; /* Biały tekst */
+    font-weight: bold;
+}
+
+.error-text {
+    font-size: 1.5rem;
+    color: #e74c3c;
+    font-weight: bold;
+}
