--- a/frontend/src/components/home/candlestickChart/CandlestickChart.css
+++ b/frontend/src/components/home/candlestickChart/CandlestickChart.css
@@ -1,16 +1,17 @@
 .chart-container {
-    width: 90%; /* Dostosuj szerokość */
-    max-width: 900px; /* Maksymalna szerokość */
-    margin: 20px auto; /* Wycentrowanie */
+    width: 90%;
+    max-width: 900px;
+    margin: 20px auto;
     padding: 20px;
     background-color: #1e1e1e;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    font-family: Arial;
 }
 
 
 .apexcharts-tooltip {
-    background-color: #333 !important; /* Ciemniejsze tooltipy */
+    background-color: #333 !important;
     color: #fff !important;
 }
 
@@ -18,7 +19,7 @@
     max-width: 100%;
 }
 
-.chart-info{
+.chart-info {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,23 +28,27 @@
 }
 
 .loading-spinner {
-    border: 4px solid #f3f3f3; /* Szary kolor tła */
-    border-top: 4px solid #3498db; /* Niebieski kolor spinnera */
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    animation: spin 1s linear infinite; /* Dodajemy animację */
+    animation: spin 1s linear infinite;
     margin-bottom: 10px;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .loading-text {
     font-size: 1.5rem;
-    color: #fff; /* Biały tekst */
+    color: #fff;
     font-weight: bold;
 }
 
